--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,25 @@ section {
     font-weight: 700;
     color: transparent;
     -webkit-text-stroke: 1px var(--main-color);
+    background-image: linear-gradient(var(--main-color), var(--main-color));
+    background-repeat: no-repeat;
+    -webkit-background-clip: text;
+    background-position: -35rem 0;
+    animation: homeBgText 6s linear infinite;
+    animation-delay: 2s;
+}
+
+.home-content .text-animate h3::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    border-right: 2px solid var(--main-color);
+    z-index: -1;
+    animation: homeCursorText 6s linear infinite;
+    animation-delay: 2s;
 }
 
 .home-content p {
@@ -310,6 +329,7 @@ span {
     border-bottom: 0.2rem solid var(--second-bg-color);
     border-left: 0.2rem solid var(--main-color);
     border-right: 0.2rem solid var(--main-color);
+    animation: aboutSpinner 8s linear infinite;
 }
 
 .about-content {
@@ -690,6 +710,48 @@ footer {
     margin-top: 20px;
     font-size: 12px;
     color: #aaa;
+}
+
+/* Text Animation */
+@keyframes homeBgText {
+
+    0%,
+    10%,
+    100% {
+        background-position: -35rem 0;
+    }
+
+    65%,
+    85% {
+        background-position: 0 0;
+    }
+}
+
+@keyframes homeCursorText {
+
+    0%,
+    10%,
+    100% {
+        width: 0;
+    }
+
+    65%,
+    78%,
+    85% {
+        width: 100%;
+        opacity: 1;
+    }
+
+    75%,
+    81% {
+        opacity: 0;
+    }
+}
+
+@keyframes aboutSpinner{
+    100%{
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
 }
 
 
