--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,7 @@ span {
 
 .about-content h3 {
     font-size: 2.6rem;
+    font-weight: 700;
 }
 
 .about-content p {
@@ -735,21 +736,21 @@ footer {
         width: 0;
     }
 
-    65%,
-    78%,
-    85% {
-        width: 100%;
+    60%,
+    73%,
+    86% {
+        width: 92%;
         opacity: 1;
     }
 
-    75%,
-    81% {
+    70%,
+    76% {
         opacity: 0;
     }
 }
 
-@keyframes aboutSpinner{
-    100%{
+@keyframes aboutSpinner {
+    100% {
         transform: translate(-50%, -50%) rotate(360deg);
     }
 }
@@ -936,4 +937,31 @@ footer {
     .home-content h1 {
         font-size: 5rem;
     }
+
+    .home-content .text-animate h3::before {
+        left: 1rem;
+    }
+
+    /* Text Animation */
+    @keyframes homeCursorText {
+
+        0%,
+        10%,
+        100% {
+            width: 0;
+        }
+
+        62%,
+        76%,
+        85% {
+            width: 94%;
+            opacity: 1;
+        }
+
+        72%,
+        78% {
+            opacity: 0;
+        }
+    }
+
 }
