--- a/css/style.css
+++ b/css/style.css
@@ -755,6 +755,176 @@ footer {
     }
 }
 
+/* LoginBox */
+
+.form_container {
+    position: absolute;
+    max-width: 500px;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 101;
+    background: #ffffff;
+    padding: 25px;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.3);
+}
+
+.form_close {
+    position: absolute;
+    top: 15px;
+    right: 20px;
+    color: #000000;
+    font-size: 12px;
+    opacity: 0.7;
+    cursor: pointer;
+}
+
+.form_container h2 {
+    font-size: 27px;
+    font-family: "poppins";
+    color: #1a1a1a;
+    text-align: center;
+    font-weight: 700;
+    text-shadow: 0 5px 10px #0004;
+}
+
+.inputBox {
+    position: relative;
+    margin-top: 30px;
+    width: 100%;
+    height: 40px;
+    font-size: 16px;
+}
+
+.inputBox input {
+    height: 100%;
+    width: 100%;
+    border: none;
+    outline: none;
+    padding: 0 30px;
+    color: #333;
+    border-bottom: 1.5px solid #aaaaaa;
+    transition: all 0.3s ease;
+}
+
+.inputBox input:focus {
+    border-color: var(--main-color);
+}
+
+.inputBox i {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+    color: #707070;
+}
+
+.inputBox i.email,
+.inputBox i.password {
+    left: 0;
+    transition: all 0.3s ease;
+}
+
+.inputBox input:focus~i.email,
+.inputBox input:focus~i.password {
+    color: var(--main-color);
+}
+
+.inputBox i.eye {
+    right: 0;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.option-field {
+    margin-top: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.form_container a {
+    color: var(--main-color);
+    font-size: 14px;
+    text-decoration: none;
+}
+
+.form_container a:hover {
+    text-decoration: underline;
+}
+
+.form-select {
+    font-size: 16px;
+}
+
+.checkbox {
+    display: flex;
+    column-gap: 8px;
+    white-space: nowrap;
+    font-size: 12px;
+}
+
+.checkbox label {
+    font-size: 14px;
+    cursor: pointer;
+    user-select: none;
+    color: #1a1a1a;
+}
+
+.form_container .signin-bt {
+    margin-top: 30px;
+    width: 100%;
+    padding: 5px 0;
+    border-radius: 20px;
+}
+
+.form_container .signin-bt:hover {
+    color: #e0e6ff;
+}
+
+.signin-bt {
+    font-size: 16px;
+}
+
+.sign-up {
+    font-size: 14px;
+    text-align: center;
+    margin-top: 16px;
+}
+
+.sign-up a {
+    font-size: 14px;
+}
+
+.divider {
+    display: flex;
+    align-items: center;
+    margin: 20px 0;
+}
+
+.divider span {
+    font-size: 14px;
+    margin: 0 10px;
+    color: #666;
+}
+
+.divider::before,
+.divider::after {
+    content: "";
+    flex: 1;
+    height: 1px;
+    background: #acacac;
+}
+
+.social-i a {
+    font-size: 25px;
+    padding: 10px;
+}
+
+/* LoginBox */
+
 
 
 
