--- a/css/style.css
+++ b/css/style.css
@@ -1266,4 +1266,18 @@ footer {
         }
     }
 
+    #modal-content {
+        padding: 2.5rem;
+    }
+
+    .code-inputs {
+        gap: 7px;
+        margin: 10px 0;
+    }
+
+    .form_close {
+        top: 10px;
+        right: 15px;
+    }
+
 }
